--- a/GamesenseSC.theme.css
+++ b/GamesenseSC.theme.css
@@ -52,7 +52,7 @@
 */
 :root {
   --avatar-shape: 50%;  /* 50% for round - 0% for square */
-  --online: #1df594;  /* Colour for online status */
+  --online: blue;  /* Colour for online status */
   --idle: #faa61a;  /* Colour for idle status */
   --dnd: #f04747;  /* Colour for dnd status */
   --offline: #4d4d4d;  /* Colour for offline status */
